			CHANGES IN ADEGENET VERSION 2.0.2
BUG FIXES
	o df2genind will now replace "." in alleles with "_" (or "p" if sep = "_")
	see https://github.com/thibautjombart/adegenet/issues/132 for details

			CHANGES IN ADEGENET VERSION 2.0.1
NEW FEATURES
	o Hs is now much faster and will scale better for large number of
	loci

	o Hs.test allows for testing differences in expected
	heterozygosity between two groups of individuals

	o strata tutorial is now available via
	adegenetTutorial(which="strata")

	o repool can now handle objects with no population information,
	and can return a list of repooled genind (argument 'list'
	defauling to FALSE)

	o read.fstat can now handle missing data coded by any number of
	"0"
	
	o `scatter.dapc` function can now label individuals using `orditorp`
	function from `vegan` package, which takes care of overlapping
	(See issue #100)
	
	o df2genind is now faster at handling missing data (See issue #114)
	
	o the summary method has better formatting

BUG FIXES
	o Hs no longer returns NaN if one locus has not been typed;
	instead, computations are done using all available loci

	o adegenetTutorial now opens up-to-date tutorials

	o subsetting genlight objects now treats missing data appropriately
	when given logical, character, or negative subscripts.
	(See issue #83 (https://github.com/thibautjombart/adegenet/issues/83))

	o fixed occasional spurious warning about duplicated individual
	labels in df2genind
	
	o fixed issues with mis-placed missing data in df2genind when samples
	were labeled with numbers (See issue #96)
	
	o frequencies can now be obtained from P/A genpop objects (See issue #105)
	
	o Windows no longer throws an error with as.genlight (See issue #109)
	
	o read.genpop now returns individual names (See issue #117)



			CHANGES IN ADEGENET VERSION 2.0.0
CHANGES IN GENIND/GENPOP/GENLIGHT OBJECTS
	o generic labels are no longer used; therefore, 'truenames' is now
	deprecated
