@@ -2,6 +2,10 @@
 BUG FIXES
 	o df2genind will now replace "." in alleles with "_" (or "p" if sep = "_")
 	see https://github.com/thibautjombart/adegenet/issues/132 for details
+	
+	o if several locus names would partially match through grep, df2genind would
+	output an incorrect genind object NA-wise. Reported by Elizabeth, see 
+  https://github.com/thibautjombart/adegenet/issues/160
 
 			CHANGES IN ADEGENET VERSION 2.0.1
 NEW FEATURES
